[package]
name = "get_cnip"
version = "7.0.0"
authors = ["Bruce Wayne <admin@bige0.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.4", features = ["native-tls", "native-tls-vendored"] }
tokio = { version = "^1.10.1", features = ["full"] }
serde = "~1.0.129"
serde_json = "~1.0.66"
