[package]
name = "get_cnip"
version = "7.0.0"
authors = ["Bruce Wayne <admin@bige0.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.6", features = ["native-tls", "native-tls-vendored"] }
tokio = { version = "^1.13.0", features = ["full"] }
serde = "~1.0.130"
serde_json = "~1.0.70"
